# OpenMP

./: .gitignore  CMakeLists.txt  Ellipsoid.h  FormatFileOuter.h  README.md  TestCaseStruct.h  graph.ipynb  main.cpp  result.txt  resultForTest1.txt  resultForTest2.txt
